<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTaskActivity">

    <TextView
        android:id="@+id/taskNameLabelCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/task_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskDateLabelCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/task_date_label"
        app:layout_constraintStart_toStartOf="@+id/taskNameLabelCreate"
        app:layout_constraintTop_toBottomOf="@+id/taskNameLabelCreate" />

    <TextView
        android:id="@+id/taskPriorityLabelCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/task_priority_label"
        app:layout_constraintStart_toStartOf="@+id/taskDateLabelCreate"
        app:layout_constraintTop_toBottomOf="@+id/taskDateLabelCreate" />

    <EditText
        android:id="@+id/taskNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/task_name_edit_text_hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/taskNameLabelCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/taskNameLabelCreate"
        app:layout_constraintTop_toTopOf="@+id/taskNameLabelCreate"
        android:autofillHints="" />

    <TextView
        android:id="@+id/taskDateTextViewCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toStartOf="@+id/setDateButton"
        app:layout_constraintStart_toStartOf="@+id/taskNameEditText"
        app:layout_constraintTop_toTopOf="@+id/taskDateLabelCreate" />

    <Button
        android:id="@+id/setDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/set_date_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/taskDateLabelCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/taskDateLabelCreate" />

    <RadioGroup
        android:id="@+id/prioritiesRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/taskPriorityLabelCreate"
        app:layout_constraintTop_toBottomOf="@+id/taskPriorityLabelCreate">

        <RadioButton
            android:id="@+id/highPriorityRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_priority_radio_button"
            android:textColor="#817C7C" />

        <RadioButton
            android:id="@+id/mediumPriorityRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium_priority_radio_button"
            android:textColor="#817C7C" />

        <RadioButton
            android:id="@+id/lowPriorityRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low_priority_radio_button"
            android:textColor="#817C7C" />
    </RadioGroup>

    <Button
        android:id="@+id/cancelButtonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/cancel_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prioritiesRadioGroup" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prioritiesRadioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>