<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayTaskActivity">

    <TextView
        android:id="@+id/taskInformationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/task_information_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskNameLabelDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/task_name_label"
        app:layout_constraintStart_toStartOf="@+id/taskInformationTextView"
        app:layout_constraintTop_toBottomOf="@+id/taskInformationTextView" />

    <TextView
        android:id="@+id/taskDateLabelDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/task_date_label"
        app:layout_constraintStart_toStartOf="@+id/taskNameLabelDisplay"
        app:layout_constraintTop_toBottomOf="@+id/taskNameLabelDisplay" />

    <TextView
        android:id="@+id/taskPriorityLabelDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/task_priority_label"
        app:layout_constraintStart_toStartOf="@+id/taskDateLabelDisplay"
        app:layout_constraintTop_toBottomOf="@+id/taskDateLabelDisplay" />

    <TextView
        android:id="@+id/taskNameTextViewDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/taskNameLabelDisplay"
        app:layout_constraintTop_toTopOf="@+id/taskNameLabelDisplay" />

    <TextView
        android:id="@+id/taskDateTextViewDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/taskNameTextViewDisplay"
        app:layout_constraintStart_toStartOf="@+id/taskNameTextViewDisplay"
        app:layout_constraintTop_toTopOf="@+id/taskDateLabelDisplay" />

    <TextView
        android:id="@+id/taskPriorityTextViewDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/taskDateTextViewDisplay"
        app:layout_constraintStart_toStartOf="@+id/taskDateTextViewDisplay"
        app:layout_constraintTop_toTopOf="@+id/taskPriorityLabelDisplay" />

    <Button
        android:id="@+id/cancelButtonDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteButtonDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/delete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>